# aweber-widget

./: .isort.cfg  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  schema.prisma
tests/: test_widgets.py
widgets/: app.py
widgets/utils/: seed_widgets.py
