[tool.poetry]
name = "widgets"
version = "1.0.0"
description = ""
authors = ["Ankur Saxena <saxenaankur001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
prisma = "^0.6.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
httpx = "^0.23.0"
pytest-trio = "^0.7.0"
anyio = "^3.6.1"
pytest-clarity = "^1.0.1"
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
bandit = "^1.7.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
)/
'''

[tool.mypy]
ignore_missing_imports = 'True'

[tool.poetry.scripts]
start = "main:start"
